# Deepseek-GUI

./: .gitignore  CHANGELOG.bak.md  CHANGELOG.md  GUI-CHANGELOG.md  PROJECT.md  README.bak.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.deepseek/: instructions.md
.github/workflows/: build.yml
docs/: GUI-TUI-ROADMAP.md  TUI-GUI-GAP.md
scripts/: build-release.ps1  build-release.sh  compare-gap.py  dev-workflow.ps1  prune-tui-duplicates.py  sync-profile-key.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_bridge.rs  main.rs  pty.rs  skill_install.rs  translate.rs
src-tauri/src/lsp/: bridge.rs  mod.rs  registry.rs
src/api/: agentRunsAlign.ts  client.ts  events.ts  optionalHttp.ts  tauri.ts  types.ts
src/codemirror/: tabCompletionExtension.ts
src/components/: AgentHistoryPanel.tsx  ApprovalDialog.tsx  AutomationsView.tsx  ChangelogModal.tsx  CodeView.tsx  CommandPalette.tsx  Composer.tsx  ComposerPillDropdown.tsx  ConfigView.tsx  ContextModal.tsx  DiffModal.tsx  DoctorPanel.tsx  EditorEmptyState.tsx  EditorPanel.tsx  ExecPanel.tsx  FeedbackModal.tsx  FileTree.tsx  FleetPanel.tsx  HomeModal.tsx  HooksPanel.tsx  JobsPanel.tsx  LinksModal.tsx  Markdown.tsx  MarkdownViewToggle.tsx  McpSettingsPanel.tsx  MemoryPanel.tsx  MessageItem.tsx  NetworkPanel.tsx  NoticeList.tsx  OnboardingModal.tsx  PanelToggleButton.tsx  PrPrefillModal.tsx  QueueBar.tsx  (+22 more)
(+41 files in other folders)
